Renamed functions and added more including Dom WIP

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Completeit</h1>
+    </header>
+
+    <div class="container">
+
+        <div class="sidebar">
+            <div id="projects"></div>
+            <div id="addproject"></div>
+        </div>
+
+        <div class="contentContainer">
+            <div id="header"></div>
+            <div id="content"></div>
+        </div>
+
+    </div>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
