Add multiple functions and re-setup git local

--- a/src/template.html
+++ b/src/template.html
@@ -13,12 +13,14 @@
     <div class="container">
 
         <div class="sidebar">
-            <div id="projects"></div>
-            <div id="addproject"></div>
+            <div id="projects" class="active">Project View</div>
+            <div id="addproject" class="notActive">Add Project</div>
         </div>
 
         <div class="contentContainer">
-            <div id="header"></div>
+            <div id="header">
+                <h2 id="headerTitle">Projects</h2>
+            </div>
             <div id="content"></div>
         </div>
 
