Added some CSS layout to help with visualising

--- a/src/template.html
+++ b/src/template.html
@@ -13,8 +13,8 @@
     <div class="container">
 
         <div class="sidebar">
-            <div id="projects" class="active">Project View</div>
-            <div id="addproject" class="notActive">Add Project</div>
+            <div id="projects" class="active"><a href="">View</a></div>
+            <div id="addproject" class="notActive"><a href="">Add Project</a></div>
         </div>
 
         <div class="contentContainer">
