Updated render functions

--- a/src/template.html
+++ b/src/template.html
@@ -13,8 +13,8 @@
     <div class="container">
 
         <div class="sidebar">
-            <div id="projects" class="active"><a href="">View</a></div>
-            <div id="addproject" class="notActive"><a href="">Add Project</a></div>
+            <div id="projects" class="active"><p>Projects</p></div>
+            <div id="addproject" class="notActive"><p>Add Project</p></div>
         </div>
 
         <div class="contentContainer">
